[tool.poetry]
name = "knoozcicd"
version = "0.1.0"
description = "A dummy MongoDB connector for CI/CD pipeline demo"
authors = ["Knooz Fatima"]
license = "MIT"
readme = "README.md"
packages = [{ include = "knoozcicd" }]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
